# rust_quickstart

./: Cargo.toml  cargo-generate.toml
.github/workflows/: rust.yml
src/: arguments.rs  main.rs
