[package]
name = "rust_quickstart"
version = "0.1.0"
edition = "2021"
author = "Philip Oetinger <phil.oetinger@hotmail.com>"
publish = false
description = "Hello world!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.49"
log = "0.4.14"
pretty_env_logger = "0.4.0"
structopt = "0.3.25"
thiserror = "1.0.30"
dialoguer = "0.9.0"
