[package]
name = "{{crate_name}}"
version = "0.1.0"
edition = "2021"
author = [ "{{authors}}" ]
publish = false
description = "{{description}}"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
{% if ask_for_logging %}
log = "0.4.14"
pretty_env_logger = "0.4.0"
{% endif %}
{% if ask_for_errors %}
anyhow = "1.0.49"
thiserror = "1.0.30"
{% endif %}
dialoguer = "0.9.0"
structopt = "0.3.25"